--- a/css/scss/_variaveis_mixins.scss
+++ b/css/scss/_variaveis_mixins.scss
@@ -2,10 +2,19 @@
 $cor-principal: #74c793;
 $cor-text: #222222;
 $cor-titulo: #FFF;
+$cinza: #bbc3d1;
+$cinza-claro: #e9eef2;
+$cinza-medio: #d3dae5;
+$cinza-escuro: #bbc3d1;
 
 // FONT-SIZE
 $font-little: 0.875em;
 $font-normal: 1.25em;
 $font-medium: 1.75em;
 $font-high: 2em;
+$font-logo: 3.5em;
 
+// FONT FAMILY
+$font--principal: 'Ubuntu';
+$font--logo: 'SkateCNoSpacing';
+$font--padrao: Arial, Helvetica, sans-serif;
