--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -1,15 +1,17 @@
 .header {
-  max-width: 100%;
-  height: 1000px;
-  background: url('../../img/bg-header.jpg') no-repeat center ;
-  padding: 20px;
+  width: 100%;
+  background: url('../../img/bg-header.jpg');
+  background-size: cover; 
   &--lista {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: baseline;
     &__logo {
       color: $cor-titulo;
-      font-size: $font-normal;
+      font-size: $font-logo;
+      font-family: $font--logo;
+      letter-spacing: .1em;
       span {
         color: $cor-principal;
       }
@@ -20,8 +22,62 @@
   }
   &--item {
     display: flex;
+    margin-left: 250px;
     p {
       margin-right: 20px;
+      font-family: $font--padrao;
+      font-weight: bold;
+      font-size: $font-little;
+      letter-spacing: .1em;
     }
   }
+}
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  flex-flow: column;
+  padding: 200px 0;
+  &--titulo {display: flex;
+    width: 100%;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    background: none;
+    border-radius: 18px;
+    text-align: center;
+    font-family: $font--principal;
+    color: $cor-titulo;
+    font-size: $font-high;
+    font-weight: bold;
+    &__paragrafo {
+      text-align: center;
+      font-family: $font--principal;
+      color: $cor-titulo;
+      font-weight: lighter;
+      padding: 20px;
+    }
+  }
+  #content--btn {
+    margin: 0 auto;
+    width: 25%;
+    display: flex;
+  }
+  a {
+    color: $cor-titulo;
+    display: flex;
+    width: 100%;
+    height: 35px;
+    justify-content: center;
+    border: 2px solid $cor-principal;
+    align-items: center;
+    border-radius: 18px;
+    &:hover {
+      background: $cor-principal;
+    }
+  }
+}
+
+.paleta--cores {
+  width: 100%;
 }
