LP-Desk-Finalizada

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -2,3 +2,7 @@
 @import 'variaveis_mixins';
 @import 'header';
 @import 'portfolio';
+@import 'about';
+@import 'advantage';
+@import 'contato';
+@import 'footer';
