--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -1,7 +1,8 @@
 .header {
   width: 100%;
   background: url('../../img/bg-header.jpg');
-  background-size: cover; 
+  background-size: cover;
+  min-height: 100vh;
   &--lista {
     display: flex;
     flex-wrap: wrap;
@@ -59,19 +60,24 @@
     }
   }
   #content--btn {
-    margin: 0 auto;
-    width: 25%;
     display: flex;
+    flex-wrap: wrap;
+    flex-flow: row;
+    align-self: center;
   }
   a {
     color: $cor-titulo;
     display: flex;
-    width: 100%;
+    width: 150px;
     height: 35px;
     justify-content: center;
     border: 2px solid $cor-principal;
     align-items: center;
     border-radius: 18px;
+    font-size: $font-little;
+    font-family: $font--principal;
+    font-weight: bold;
+    margin: 0 10px;
     &:hover {
       background: $cor-principal;
     }
