--- a/css/scss/_portfolio.scss
+++ b/css/scss/_portfolio.scss
@@ -2,28 +2,53 @@
   display: flex;
   flex-flow: column nowrap;
   max-width: 1000px;
+  width: 50%;
   margin: 0 auto;
   padding: 80px 0;
   &__titulo {
     text-align: center;
-    padding-bottom: 20px; 
+    padding-bottom: 20px;
+    font-family: $font--principal;
   }
   &__content {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
-    height: 600px;
-    &--cinza {
+    padding-bottom: 20px;
+    justify-content: space-between;
+    &--item {
+      width: 215px;
+      height: 200px;
       background: $cinza-claro;
-      width: 100px;
+      &:nth-child(3n) {
+        background: $cinza-escuro;
+      }
+      &:nth-child(3n-1) {
+        background: $cinza-medio;
+      }
+      margin: 5px 0;
+      a:hover {
+        background: $cor-principal url('../../img/icon-eye.png') no-repeat center;
+      }
     }
-    &--medio {
-      background: $cinza-medio;
+  }
+  #content--btn {
+    margin: 0 auto;
+    width: 100px;
+    display: flex;
+    padding-bottom: 80px;
+    &__link {
+      color: $cor-text;
+      display: flex;
       width: 100px;
-    }
-    &--escuro {
-      background: $cinza-escuro;
-      width: 100px;
+      height: 35px;
+      justify-content: center;
+      border: 2px solid $cor-principal;
+      align-items: center;
+      border-radius: 18px;
+      font-weight: bold;
+      &:hover {
+        background: $cor-principal;
+      }
     }
   }
 }
