--- a/css/scss/_reset.scss
+++ b/css/scss/_reset.scss
@@ -1,4 +1,10 @@
 // RESET
+* {
+  -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
+
 body, h1, h2, ul, li, a {
   margin: 0;
   padding: 0;
@@ -15,6 +21,9 @@ img {
 
 a {
   text-decoration: none;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .container {
