--- a/css/scss/_portfolio.scss
+++ b/css/scss/_portfolio.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-wrap: wrap;
     padding-bottom: 20px;
-    justify-content: space-between;
+    justify-content: space-evenly;
     &--item {
       width: 215px;
       height: 200px;
@@ -46,6 +46,7 @@
       align-items: center;
       border-radius: 18px;
       font-weight: bold;
+      font-family: $font--principal;
       &:hover {
         background: $cor-principal;
       }
