--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -25,6 +25,7 @@
   &--item {
     display: flex;
     margin-left: 250px;
+    cursor: pointer;
     p {
       margin-right: 20px;
       font-family: $font--principal;
@@ -50,7 +51,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-flow: column;
-  padding: 200px 0;
+  padding: 280px 0;
   &--titulo {display: flex;
     width: 100%;
     height: 35px;
@@ -63,12 +64,14 @@
     color: $cor-titulo;
     font-size: $font-high;
     font-weight: bold;
+    letter-spacing: .1em;
     &__paragrafo {
       text-align: center;
       font-family: $font--principal;
       color: $cor-titulo;
       font-weight: lighter;
-      padding: 20px;
+      padding-bottom: 20px;
+      font-size: 1.5em;
     }
   }
   #content--btn {
