--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -21,27 +21,27 @@
       color: $cor-titulo;
       
     }
-  }
-  &--item {
-    display: flex;
-    margin-left: 250px;
-    cursor: pointer;
-    p {
-      margin-right: 20px;
-      font-family: $font--principal;
-      font-weight: bold;
-      font-size: $font-little;
-      letter-spacing: .1em;
-      &::after {
-        content: '';
-        display: block;
-        background: $cor-principal;
-        height: 3px;
-        width: 0;
-        transition: .3s;
-      }
-      &:hover::after {
-        width: 100%;
+    &__item {
+      display: flex;
+      margin-left: 250px;
+      cursor: pointer;
+      p {
+        margin-right: 20px;
+        font-family: $font--principal;
+        font-weight: bold;
+        font-size: $font-little;
+        letter-spacing: .1em;
+        &::after {
+          content: '';
+          display: block;
+          background: $cor-principal;
+          height: 3px;
+          width: 0;
+          transition: .3s;
+        }
+        &:hover::after {
+          width: 100%;
+        }
       }
     }
   }
@@ -55,11 +55,10 @@
   &--titulo {display: flex;
     width: 100%;
     height: 35px;
-    justify-content: center;
     align-items: center;
     background: none;
-    border-radius: 18px;
     text-align: center;
+    justify-content: center;
     font-family: $font--principal;
     color: $cor-titulo;
     font-size: $font-high;
@@ -70,7 +69,7 @@
       font-family: $font--principal;
       color: $cor-titulo;
       font-weight: lighter;
-      padding-bottom: 20px;
+      margin: 20px 0;
       font-size: 1.5em;
     }
   }
@@ -101,4 +100,31 @@
 
 .paleta--cores {
   width: 100%;
+}
+
+// RESPONSIVO
+@include device(xsm) {
+  .header {
+    min-height: 0;
+  }
+  .content {
+    padding: 220px 0;
+    &--titulo {
+      letter-spacing: 0;
+    }
+  }
+}
+
+@include device(lg) {
+  .header {
+    &--lista {
+      flex-flow: column;
+      align-items: center;
+      &__item {
+        width: 100%;
+        margin: 20px auto;
+        justify-content: space-evenly;
+      }
+    }
+  }
 }
