--- a/css/scss/_reset.scss
+++ b/css/scss/_reset.scss
@@ -5,7 +5,7 @@
             box-sizing: border-box;
 }
 
-body, h1, h2, ul, li, a {
+body, h1, h2, ul, li, a, p {
   margin: 0;
   padding: 0;
   user-select: none;
