Alteracoes-no-CSS

--- a/css/scss/_about.scss
+++ b/css/scss/_about.scss
@@ -9,7 +9,7 @@
   p {
     text-align: center;
     font-family: $font--principal;
-    font-size: $font-little;
+    font-size: $font-small;
     color: #26303a;
   }
 }
