--- a/css/scss/_advantage.scss
+++ b/css/scss/_advantage.scss
@@ -16,7 +16,7 @@
     padding: 60px 0;
     p {
       width: 30%;
-      font-size: $font-little;
+      font-size: $font-small;
       font-family: $font--principal;
     }
     img {
@@ -25,7 +25,7 @@
     &--lista {
       width: 30%;
       padding: 20px 0;
-      font-size: $font-little;
+      font-size: $font-small;
       font-family: $font--principal;
       position: relative;
       
