--- a/css/scss/_variaveis_mixins.scss
+++ b/css/scss/_variaveis_mixins.scss
@@ -8,7 +8,9 @@ $cinza-medio: #d3dae5;
 $cinza-escuro: #bbc3d1;
 
 // FONT-SIZE
-$font-little: 0.875em;
+$font-x-little: 0.571em;
+$font-little: 0.714em;
+$font-small: 0.875em;
 $font-normal: 1.25em;
 $font-medium: 1.75em;
 $font-high: 2em;
