--- a/css/scss/_portfolio.scss
+++ b/css/scss/_portfolio.scss
@@ -2,8 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   width: 700px;
-  margin: 0 auto;
-  padding: 80px 0;
+  margin: 100px auto;
   &__titulo {
     text-align: center;
     padding-bottom: 20px;
@@ -32,10 +31,10 @@
     }
   }
   #content--btn {
-    margin: 0 auto;
-    width: 100px;
+    width: 100%;
     display: flex;
-    padding-bottom: 80px;
+    margin-bottom: 40px;
+    justify-content: center;
     &__link {
       color: $cor-text;
       display: flex;
@@ -50,6 +49,18 @@
       &:hover {
         background: $cor-principal;
       }
+    }
+  }
+}
+
+@include device(xsm) {
+  .portfolio--main {
+    width: 420px;
+    margin: 50px auto;
+    #content--btn {
+      justify-content: center;
+      margin-bottom: 40px;
+      width: 100%;
     }
   }
 }
