--- a/css/scss/_contato.scss
+++ b/css/scss/_contato.scss
@@ -1,6 +1,6 @@
 .contato--content  {
-  width: 70%;
-  margin: 0 auto;
+  width: 100%;
+  margin: 0 auto 80px;
   &__titulo {
     text-align: center;
     margin-bottom: 40px;
