--- a/css/scss/_variaveis_mixins.scss
+++ b/css/scss/_variaveis_mixins.scss
@@ -8,13 +8,13 @@ $cinza-medio: #d3dae5;
 $cinza-escuro: #bbc3d1;
 
 // FONT-SIZE
-$font-x-little: 0.571em;
-$font-little: 0.714em;
-$font-small: 0.875em;
-$font-normal: 1.25em;
-$font-medium: 1.75em;
-$font-high: 2em;
-$font-logo: 3.5em;
+$font-x-little: 0.571em; // 8px
+$font-little: 0.714em; // 10px
+$font-small: 0.875em; // 12px
+$font-normal: 1.25em; // 14px
+$font-medium: 1.75em; // 24px
+$font-high: 2em; // 28px
+$font-logo: 3.5em; // 49px
 
 // FONT FAMILY
 $font--principal: 'Ubuntu';
