--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   min-height: 100vh;
-  background: url('../../img/bg-header.jpg');
+  background: url('../img/bg-header.jpg');
   background-size: cover;
   &--lista {
     display: flex;
