[DESK/MOB] Ajuste-no-posicionamento-ADVANTAGE

--- a/css/scss/_advantage.scss
+++ b/css/scss/_advantage.scss
@@ -67,6 +67,7 @@
         font-size: $font-little;
         text-align: center;
         line-height: 15px;
+        justify-content: flex-start;
         li {
           width: 100%;
           &::before {
