--- a/css/scss/_portfolio.scss
+++ b/css/scss/_portfolio.scss
@@ -26,7 +26,7 @@
       }
       margin: 5px 0;
       a:hover {
-        background: $cor-principal url('../../img/icon-eye.png') no-repeat center;
+        background: $cor-principal url('../img/icon-eye.png') no-repeat center;
       }
     }
   }
