[DESK/MOB] Personalizacao-de-Hovers-nos-Botoes

--- a/css/scss/_contato.scss
+++ b/css/scss/_contato.scss
@@ -42,6 +42,10 @@
       color: $cor-titulo;
       font-family: $font--principal;
       font-weight: bold;
+      &:hover {
+        color: $cor-preto;
+        background: $cor-titulo;
+      }
     }
   }
 }
