--- a/css/scss/_portfolio.scss
+++ b/css/scss/_portfolio.scss
@@ -48,6 +48,7 @@
       font-family: $font--principal;
       &:hover {
         background: $cor-principal;
+        color: $cor-titulo;
       }
     }
   }
