--- a/css/scss/_variaveis_mixins.scss
+++ b/css/scss/_variaveis_mixins.scss
@@ -6,6 +6,7 @@ $cinza: #bbc3d1;
 $cinza-claro: #e9eef2;
 $cinza-medio: #d3dae5;
 $cinza-escuro: #bbc3d1;
+$cor-preto: #000;
 
 // FONT-SIZE
 $font-x-little: 0.571em; // 8px
