[DESK/MOB] Retirado-o-Shipping-e-Inclusao-do-Yarn

--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -1,9 +1,8 @@
 @import 'reset';
 @import 'variaveis_mixins';
-@import 'header';
-@import 'portfolio';
-@import 'about';
-@import 'advantage';
-@import 'contato';
-@import 'shipping';
-@import 'footer';
+@import '_header';
+@import '_portfolio';
+@import '_about';
+@import '_advantage';
+@import '_contato';
+@import '_footer';
