--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -52,7 +52,8 @@
   flex-wrap: wrap;
   flex-flow: column;
   margin: 280px 0;
-  &--titulo {display: flex;
+  &--titulo {
+    display: flex;
     width: 100%;
     height: 35px;
     align-items: center;
